# generative-ai-projects

./: README.md
project-0_fastapi-hello-world/: README.md
project-0_fastapi-hello-world/uitclass/: main.py
project-0_hello-world/fastapi/: pyproject.toml
project-0_hello-world/starlette/: README.md  main.py
project-1_fastapi-neondb-ngrok/: .gitignore  README.md  pyproject.toml
project-1_fastapi-neondb-ngrok/fastapi_neon/: main.py  settings.py
project-1_todo-list-fastapi-neondb-ngrok/: .env  README.md  dockerfile  pyproject.toml
project-1_todo-list-fastapi-neondb-ngrok/todo_list/: main.py
project-2_todo-list-full-stack-nextjs-fastapi/client/: README.md  package-lock.json  react-nextjs-README.md
project-2_todo-list-full-stack-nextjs-fastapi/project_2/: README.md
project-2_todo-list-full-stack-nextjs-fastapi/project_3-multi-tenant-app/: pyproject.toml
project-2_todo-list-full-stack-nextjs-fastapi/server/: README.md  apprunner.yaml
project-3_docker-containerization/: containerization-setup.md  multi-containerization-setup.md
project-3_docker-containerization/fastapi-project/: README.md  devcontainer-containerization.md  dockerfile  pyproject.toml
project-3_docker-containerization/fastapi-project/.devcontainer/: devcontainer.json
project-4_apache-kafka/0_kafka_setup/: README.md
project-4_apache-kafka/2_kafka_order-todo-service-producer-consumer/: README.md
project-5_kong-basics/: README.md
project-5_kong-basics/03_kong_jwt/: README.md
project-6_protobuf/: person.proto  person.py  person_pb2.py  protobuf-guide.md
project-7_bdd-tdd/: bdd.md
(+25 files in other folders)
