[tool.poetry]
name = "my-poetry-fastapi-project"
version = "0.1.0"
description = ""
authors = ["Usama Qazi <usamyharis@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
